Completed css-brochure-form exercise.

--- a/css-brochure-form/index.html
+++ b/css-brochure-form/index.html
@@ -10,34 +10,36 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h2>LEARN MORE</h2>
-  <form>
-    <label for="email">COMPANY EMAIL</label>
-    <div>
-      <input type="email" name="email" placeholder="sally@company.co">
-    </div>
-    <br />
-    <label for="name">NAME</label>
-    <div>
-      <input type="text" name="name" placeholder="Sally Smith">
-    </div>
-    <br />
-    <label for="location">WHERE ARE YOU HIRING?</label>
-    <div>
-      <input type="text" name="location" placeholder="City, Country">
-    </div>
-    <br />
-    <label for="hiring">HOW MANY ENGINEERS ARE YOU HIRING IN THE NEXT 6 MONTHS?</label>
-    <div>
-      <select name="hiring" id="hiring">
-        <option value="1-2">1-2 Engineers</option>
-        <option value="3-4">3-4 Engineers</option>
-        <option value="5-6">5-6 Engineers</option>
-        <option value="7+">7+ Engineers</option>
-      </select>
-    </div>
-    <br />
-    <input type="submit" value="SUBMIT">
-  </form>
+  <div class="container">
+    <h2>LEARN MORE</h2>
+    <form>
+      <label for="email">COMPANY EMAIL</label>
+      <div>
+        <input type="email" name="email" placeholder="sally@company.co">
+      </div>
+      <br />
+      <label for="name">NAME</label>
+      <div>
+        <input type="text" name="name" placeholder="Sally Smith">
+      </div>
+      <br />
+      <label for="location">WHERE ARE YOU HIRING?</label>
+      <div>
+        <input type="text" name="location" placeholder="City, Country">
+      </div>
+      <br />
+      <label for="hiring">HOW MANY ENGINEERS ARE YOU HIRING IN THE NEXT 6 MONTHS?</label>
+      <div>
+        <select name="hiring" id="hiring">
+          <option value="1-2">1-2 Engineers</option>
+          <option value="3-4">3-4 Engineers</option>
+          <option value="5-6">5-6 Engineers</option>
+          <option value="7+">7+ Engineers</option>
+        </select>
+      </div>
+      <br />
+      <input type="submit" value="SUBMIT">
+    </form>
+  </div>
 </body>
 </html>
