--- a/es6-template-literals/index.html
+++ b/es6-template-literals/index.html
@@ -21,7 +21,8 @@
     const bio = `My name is ${firstName} ${lastName} and I am ${age} years old.`;
     // const bio = 'My name is ' + firstName + ' ' + lastName + ' and I am ' + age + ' years old.';
 
-    console.log('Bio:', bio);
+    console.log(`Bio: ${bio}`);
+    // console.log('Bio:', bio);
 
     const fruit = 'apple';
     const item = 'pen';
@@ -33,7 +34,8 @@
     // console.log('I have a', item);
     console.log(`I have an ${fruit}`);
     // console.log('I have an', fruit);
-    console.log(applePen);
+    console.log(`${applePen}`);
+    // console.log(applePen);
   </script>
 </body>
 
